Эндпоинт статистики
